cli/tests/snapshot/inputs/errors/destructuring_type_mismatch_nested_destructuring_fail.ncl
# capture = 'stderr'
# command = ['eval']
(let { a : { b : Number } = { b }} = { a = { b = "no" }} in
b) : _
